WSpiceBuilder/src/wspice/MATLABParser.java
// Generated from MATLABParser.g4 by ANTLR 4.5.3

    package wspice;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MATLABParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FUNCTION=1, CLASSDEF=2, PROPERTIES=3, METHODS=4, END=5, IF=6, ELSEIF=7, 
		ELSE=8, FOR=9, WHILE=10, SWITCH=11, CASE=12, OTHERWISE=13, EQUALS=14, 
		EQUALTO=15, NOTEQUALTO=16, GT=17, LT=18, GE=19, LE=20, PLUS=21, MINUS=22, 
		DOT=23, VECAND=24, VECOR=25, SCALAND=26, SCALOR=27, LPAREN=28, RPAREN=29, 
		LBRACE=30, LBRACK=31, MTIMES=32, TIMES=33, RDIVIDE=34, LDIVIDE=35, MRDIVIDE=36, 
		MLDIVIDE=37, POW=38, MPOW=39, NOT=40, COLON=41, TRANS=42, CTRANS=43, NL=44, 
		COMMENT=45, INT=46, FLOAT=47, SCI=48, ID=49, STRING=50, RBRACK=51, RBRACE=52, 
		COMMA=53, SEMI=54, WS=55;
	public static final int
		RULE_fileDecl = 0, RULE_script = 1, RULE_endStat = 2, RULE_endStatNL = 3, 
		RULE_partialFunctionDecl = 4, RULE_functionDecl = 5, RULE_methodDecl = 6, 
		RULE_classDecl = 7, RULE_propBlockDecl = 8, RULE_methodBlockDecl = 9, 
		RULE_outArgs = 10, RULE_inArgs = 11, RULE_prop = 12, RULE_idRef = 13, 
		RULE_statBlock = 14, RULE_ifStat = 15, RULE_whileStat = 16, RULE_forStat = 17, 
		RULE_caseStat = 18, RULE_scalarAssignStat = 19, RULE_arrayAssignStat = 20, 
		RULE_stat = 21, RULE_arrayRef = 22, RULE_arrayExpr = 23, RULE_cellExpr = 24, 
		RULE_expr = 25, RULE_exprList = 26, RULE_exprArrayList = 27;
	public static final String[] ruleNames = {
		"fileDecl", "script", "endStat", "endStatNL", "partialFunctionDecl", "functionDecl", 
		"methodDecl", "classDecl", "propBlockDecl", "methodBlockDecl", "outArgs", 
		"inArgs", "prop", "idRef", "statBlock", "ifStat", "whileStat", "forStat", 
		"caseStat", "scalarAssignStat", "arrayAssignStat", "stat", "arrayRef", 
		"arrayExpr", "cellExpr", "expr", "exprList", "exprArrayList"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'function'", "'classdef'", "'properties'", "'methods'", "'end'", 
		"'if'", "'elseif'", "'else'", "'for'", "'while'", "'switch'", "'case'", 
		"'otherwise'", "'='", "'=='", "'~='", "'>'", "'<'", "'>='", "'<='", "'+'", 
		"'-'", "'.'", "'&'", "'|'", "'&&'", "'||'", "'('", "')'", "'{'", "'['", 
		"'*'", "'.*'", "'/'", "'\\'", "'./'", "'.\\'", "'.^'", "'^'", "'~'", "':'", 
		"'.@'", "'@'", null, null, null, null, null, null, null, "']'", "'}'", 
		"','", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "FUNCTION", "CLASSDEF", "PROPERTIES", "METHODS", "END", "IF", "ELSEIF", 
		"ELSE", "FOR", "WHILE", "SWITCH", "CASE", "OTHERWISE", "EQUALS", "EQUALTO", 
		"NOTEQUALTO", "GT", "LT", "GE", "LE", "PLUS", "MINUS", "DOT", "VECAND", 
		"VECOR", "SCALAND", "SCALOR", "LPAREN", "RPAREN", "LBRACE", "LBRACK", 
		"MTIMES", "TIMES", "RDIVIDE", "LDIVIDE", "MRDIVIDE", "MLDIVIDE", "POW", 
		"MPOW", "NOT", "COLON", "TRANS", "CTRANS", "NL", "COMMENT", "INT", "FLOAT", 
		"SCI", "ID", "STRING", "RBRACK", "RBRACE", "COMMA", "SEMI", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MATLABParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MATLABParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileDeclContext extends ParserRuleContext {
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public List<PartialFunctionDeclContext> partialFunctionDecl() {
			return getRuleContexts(PartialFunctionDeclContext.class);
		}
		public PartialFunctionDeclContext partialFunctionDecl(int i) {
			return getRuleContext(PartialFunctionDeclContext.class,i);
		}
		public List<StatBlockContext> statBlock() {
			return getRuleContexts(StatBlockContext.class);
		}
		public StatBlockContext statBlock(int i) {
			return getRuleContext(StatBlockContext.class,i);
		}
		public TerminalNode EOF() { return getToken(MATLABParser.EOF, 0); }
		public FileDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fileDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).enterFileDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).exitFileDecl(this);
		}
	}

	public final FileDeclContext fileDecl() throws RecognitionException {
		FileDeclContext _localctx = new FileDeclContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_fileDecl);
		int _la;
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(56);
					functionDecl();
					}
					break;
				case 2:
					{
					setState(57);
					classDecl();
					}
					break;
				}
				setState(72);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(63);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==FUNCTION) {
						{
						{
						setState(60);
						functionDecl();
						}
						}
						setState(65);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				case 2:
					{
					setState(69);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==FUNCTION) {
						{
						{
						setState(66);
						partialFunctionDecl();
						}
						}
						setState(71);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(74);
					partialFunctionDecl();
					}
					}
					setState(77); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==FUNCTION );
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(79);
					statBlock();
					}
					}
					setState(82); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << SWITCH) | (1L << PLUS) | (1L << MINUS) | (1L << LPAREN) | (1L << LBRACE) | (1L << LBRACK) | (1L << NOT) | (1L << INT) | (1L << FLOAT) | (1L << SCI) | (1L << ID) | (1L << STRING))) != 0) );
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScriptContext extends ParserRuleContext {
		public List<StatBlockContext> statBlock() {
			return getRuleContexts(StatBlockContext.class);
		}
		public StatBlockContext statBlock(int i) {
			return getRuleContext(StatBlockContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).exitScript(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << SWITCH) | (1L << PLUS) | (1L << MINUS) | (1L << LPAREN) | (1L << LBRACE) | (1L << LBRACK) | (1L << NOT) | (1L << INT) | (1L << FLOAT) | (1L << SCI) | (1L << ID) | (1L << STRING))) != 0)) {
				{
				{
				setState(87);
				statBlock();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndStatContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(MATLABParser.NL, 0); }
		public TerminalNode COMMA() { return getToken(MATLABParser.COMMA, 0); }
		public TerminalNode SEMI() { return getToken(MATLABParser.SEMI, 0); }
		public EndStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).enterEndStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).exitEndStat(this);
		}
	}

	public final EndStatContext endStat() throws RecognitionException {
		EndStatContext _localctx = new EndStatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_endStat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NL) | (1L << COMMA) | (1L << SEMI))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndStatNLContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(MATLABParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(MATLABParser.NL, i);
		}
		public EndStatNLContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endStatNL; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).enterEndStatNL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).exitEndStatNL(this);
		}
	}

	public final EndStatNLContext endStatNL() throws RecognitionException {
		EndStatNLContext _localctx = new EndStatNLContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_endStatNL);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(95);
					match(NL);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(98); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PartialFunctionDeclContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(MATLABParser.FUNCTION, 0); }
		public TerminalNode ID() { return getToken(MATLABParser.ID, 0); }
		public EndStatContext endStat() {
			return getRuleContext(EndStatContext.class,0);
		}
		public OutArgsContext outArgs() {
			return getRuleContext(OutArgsContext.class,0);
		}
		public InArgsContext inArgs() {
			return getRuleContext(InArgsContext.class,0);
		}
		public List<StatBlockContext> statBlock() {
			return getRuleContexts(StatBlockContext.class);
		}
		public StatBlockContext statBlock(int i) {
			return getRuleContext(StatBlockContext.class,i);
		}
		public PartialFunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_partialFunctionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).enterPartialFunctionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).exitPartialFunctionDecl(this);
		}
	}

	public final PartialFunctionDeclContext partialFunctionDecl() throws RecognitionException {
		PartialFunctionDeclContext _localctx = new PartialFunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_partialFunctionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(FUNCTION);
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(101);
				outArgs();
				}
				break;
			}
			setState(104);
			match(ID);
			setState(106);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(105);
				inArgs();
				}
			}

			setState(108);
			endStat();
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << SWITCH) | (1L << PLUS) | (1L << MINUS) | (1L << LPAREN) | (1L << LBRACE) | (1L << LBRACK) | (1L << NOT) | (1L << INT) | (1L << FLOAT) | (1L << SCI) | (1L << ID) | (1L << STRING))) != 0)) {
				{
				{
				setState(109);
				statBlock();
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclContext extends ParserRuleContext {
		public PartialFunctionDeclContext partialFunctionDecl() {
			return getRuleContext(PartialFunctionDeclContext.class,0);
		}
		public TerminalNode END() { return getToken(MATLABParser.END, 0); }
		public EndStatNLContext endStatNL() {
			return getRuleContext(EndStatNLContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(MATLABParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(MATLABParser.NL, i);
		}
		public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).enterFunctionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).exitFunctionDecl(this);
		}
	}

	public final FunctionDeclContext functionDecl() throws RecognitionException {
		FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			partialFunctionDecl();
			setState(116);
			match(END);
			setState(117);
			endStatNL();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(118);
				match(NL);
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclContext extends ParserRuleContext {
		public PartialFunctionDeclContext partialFunctionDecl() {
			return getRuleContext(PartialFunctionDeclContext.class,0);
		}
		public TerminalNode END() { return getToken(MATLABParser.END, 0); }
		public EndStatContext endStat() {
			return getRuleContext(EndStatContext.class,0);
		}
		public MethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).enterMethodDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).exitMethodDecl(this);
		}
	}

	public final MethodDeclContext methodDecl() throws RecognitionException {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_methodDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			partialFunctionDecl();
			setState(125);
			match(END);
			setState(126);
			endStat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public TerminalNode CLASSDEF() { return getToken(MATLABParser.CLASSDEF, 0); }
		public TerminalNode ID() { return getToken(MATLABParser.ID, 0); }
		public List<EndStatContext> endStat() {
			return getRuleContexts(EndStatContext.class);
		}
		public EndStatContext endStat(int i) {
			return getRuleContext(EndStatContext.class,i);
		}
		public TerminalNode END() { return getToken(MATLABParser.END, 0); }
		public TerminalNode EOF() { return getToken(MATLABParser.EOF, 0); }
		public List<PropBlockDeclContext> propBlockDecl() {
			return getRuleContexts(PropBlockDeclContext.class);
		}
		public PropBlockDeclContext propBlockDecl(int i) {
			return getRuleContext(PropBlockDeclContext.class,i);
		}
		public List<MethodBlockDeclContext> methodBlockDecl() {
			return getRuleContexts(MethodBlockDeclContext.class);
		}
		public MethodBlockDeclContext methodBlockDecl(int i) {
			return getRuleContext(MethodBlockDeclContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(MATLABParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(MATLABParser.NL, i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).exitClassDecl(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(CLASSDEF);
			setState(129);
			match(ID);
			setState(130);
			endStat();
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PROPERTIES || _la==METHODS) {
				{
				setState(133);
				switch (_input.LA(1)) {
				case PROPERTIES:
					{
					setState(131);
					propBlockDecl();
					}
					break;
				case METHODS:
					{
					setState(132);
					methodBlockDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			match(END);
			setState(141);
			switch (_input.LA(1)) {
			case EOF:
				{
				setState(139);
				match(EOF);
				}
				break;
			case NL:
			case COMMA:
			case SEMI:
				{
				setState(140);
				endStat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(143);
				match(NL);
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropBlockDeclContext extends ParserRuleContext {
		public TerminalNode PROPERTIES() { return getToken(MATLABParser.PROPERTIES, 0); }
		public List<EndStatContext> endStat() {
			return getRuleContexts(EndStatContext.class);
		}
		public EndStatContext endStat(int i) {
			return getRuleContext(EndStatContext.class,i);
		}
		public TerminalNode END() { return getToken(MATLABParser.END, 0); }
		public List<PropContext> prop() {
			return getRuleContexts(PropContext.class);
		}
		public PropContext prop(int i) {
			return getRuleContext(PropContext.class,i);
		}
		public PropBlockDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propBlockDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).enterPropBlockDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).exitPropBlockDecl(this);
		}
	}

	public final PropBlockDeclContext propBlockDecl() throws RecognitionException {
		PropBlockDeclContext _localctx = new PropBlockDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_propBlockDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(PROPERTIES);
			setState(150);
			endStat();
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(151);
				prop();
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(157);
			match(END);
			setState(158);
			endStat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodBlockDeclContext extends ParserRuleContext {
		public TerminalNode METHODS() { return getToken(MATLABParser.METHODS, 0); }
		public List<EndStatContext> endStat() {
			return getRuleContexts(EndStatContext.class);
		}
		public EndStatContext endStat(int i) {
			return getRuleContext(EndStatContext.class,i);
		}
		public TerminalNode END() { return getToken(MATLABParser.END, 0); }
		public List<MethodDeclContext> methodDecl() {
			return getRuleContexts(MethodDeclContext.class);
		}
		public MethodDeclContext methodDecl(int i) {
			return getRuleContext(MethodDeclContext.class,i);
		}
		public MethodBlockDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodBlockDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).enterMethodBlockDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).exitMethodBlockDecl(this);
		}
	}

	public final MethodBlockDeclContext methodBlockDecl() throws RecognitionException {
		MethodBlockDeclContext _localctx = new MethodBlockDeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_methodBlockDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(METHODS);
			setState(161);
			endStat();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				{
				setState(162);
				methodDecl();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(168);
			match(END);
			setState(169);
			endStat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutArgsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(MATLABParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MATLABParser.ID, i);
		}
		public TerminalNode EQUALS() { return getToken(MATLABParser.EQUALS, 0); }
		public TerminalNode LBRACK() { return getToken(MATLABParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(MATLABParser.RBRACK, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MATLABParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MATLABParser.COMMA, i);
		}
		public OutArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outArgs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).enterOutArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABParserListener ) ((MATLABParserListener)listener).exitOutArgs(this);
		}
	}
